2007-12-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Output extension build results when
	really verbose.  From bug #15853 John Croisant.
	* lib/rubygems/specification.rb:  Fix backwards compatibility with
	0.9.4, don't allow the platform to be nil or an empty string.  Bug
	#16177 by Dan Manges.
	* setup.rb:  Re-exec setup.rb if rubygems is loaded and RUBYOPT is
	set.  Fixes bug #15974 by Joshua Sierles.
	* lib/rubygems/update_command.rb:  Tweak formatting of updated
	message.  Bug #15625 by Bil Kleb.
	* lib/rubygems/remote_fetcher.rb:  Add URI to exception message for
	Gem::RemoteFetcher#fetch_size.  Bug #14801 by Bil Kleb.

2007-12-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/query_command.rb:  Don't display duplicate
	version numbers.  Bug #15828 by Tim Fletcher.
	* setup.rb:  Fix my stupidity with --help.  Patch #16308 by Stephen
	Bannasch.  Fix --prefix= argument.  Bug #16002 by Piglop.

2007-12-13  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/server_command.rb:  Fix --no-daemon.  Bug by
	Chad Woolley.
	* lib/rubygems/server.rb:  Fix Marshal quick index.  Bug by Chad
	Woolley.
	* lib/rubygems/installer.rb: Respect Gem::Specification#bindir.  Bug
	#16202 by Suraj Kurapati.
	* lib/rubygems/commands/update_command.rb: Fix `gem update mysql`.
	Bug #16244 by Stephen Bannasch.

2007-12-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Add --format-executable option to
	install executables with ruby's program-suffix and prefix.  Patch
	#14688 by Jeremy Kemper.  Also, installing in really-verbose mode
	prints out written files.
	* setup.rb:  Add --format-executable option to install gem with ruby's
	program-suffix and prefix.  Add --help.  Fixes bug #16056 by Chad
	Woolley.
	* lib/rubygems/uninstaller.rb:  Fallback to original_platform_name
	correctly.  Patch #15960 by Nicola Piccinini's friend.

2007-12-11  Eric Hodel  <drbrain@segment7.net>
